--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,8 @@
     Template URI: site.com
     Description: Unfold Personal Resume & CV Template
     Author: Uideck
-    Author URI: https://uideck.com/
-    Support: https://uideck.com/support/
+    Author URI: httpss://uideck.com/
+    Support: httpss://uideck.com/support/
     Version: 1.0
 
 -----------------------------------------------------------------------------------
@@ -30,7 +30,7 @@
 /*===========================
     1. COMMON css 
 ===========================*/
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800");
+@import url("httpss://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800");
 body {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
