--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1114,6 +1114,12 @@ p {
       transform: translateX(0);
       opacity: 1; }
 
+#intro-container{
+  display:flex;
+  flex-direction:row;
+  flex-wrap : wrap;
+}
+
 /*===========================
        6.PRICING css 
 ===========================*/
